build issues fixing

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image" href="/src/assets/images/logo.png" />
-    <link rel="preload" as="image" href="/src/assets/images/logo.png" />
+    <link rel="preload" as="image" href="/src/assets/images/avatar1.png" />
+    <link rel="preload" as="image" href="/src/assets/images/avatar2.png" />
+    <link rel="preload" as="image" href="/src/assets/images/avatar3.png" />
+    <link rel="preload" as="image" href="/src/assets/images/developer.jpg" />
+    <link rel="preload" as="image" href="/src/assets/images/outfy.png" />
+    <link rel="preload" as="image" href="/src/assets/images/restaurant-website.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JY's Dev</title>
   </head>
