--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preload" as="image" href="/src/assets/images/outfy.png" />
     <link rel="preload" as="image" href="/src/assets/images/restaurant-website.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>JY's Dev</title>
+    <title>JYF Solutions</title>
   </head>
   <body>
     <div id="root"></div>
